# Stickshark

./: .gitignore  CMakeLists.txt  JSON_API.md  Makefile  README.md  board_state.json  chess_board.html  chess_viewer.html  json_viewer.html
cmake/: GenerateVersion.cmake
data/: magics.txt
include/: board.h  gamestate.h  main.h  move.h  utility.h
src/: benchmark.cpp  benchmark.h  bit.cpp  bit.h  board.cpp  constants.h  http_server.cpp  main.cpp  main.h  pool.h  utility.cpp  utility.h  version.h.in  web_interface.cpp  web_interface.h
src/chess/: bit.cpp  bit.h
src/chess/board/: board.cpp  board.h  gamestate.cpp  gamestate.h  move.cpp  move.h
src/chess/moveGen/: generatePseudo.cpp  generatePseudo.h
src/chess/moveGeneration/: bitTables.cpp  bitTables.h  moveGen.cpp  moveGen.h
src/communication/: http_server.cpp  http_server.h  uci.cpp  uci.h  web_interface.cpp  web_interface.h
src/engine/: engine.cpp  engine.h  evalConstants.cpp  evalConstants.h  evaluation.cpp  evaluation.h  openingBook.cpp  openingBook.h  transpositionTable.cpp  transpositionTable.h
src/moveGen/: board.cpp  gamestate.cpp  move.cpp
src/web/: http_server.cpp  http_server.h  web_interface.cpp  web_interface.h
tests/: testMoveGen.cpp  testRunner.h
web/: chess_board.html  json_viewer.html
